fixing preview header and description spacing

--- a/src/components/Blog/BlogPostPreview/_BlogPostPreview.scss
+++ b/src/components/Blog/BlogPostPreview/_BlogPostPreview.scss
@@ -31,7 +31,13 @@
 
     h3 {
       text-align: center;
-      margin-block-end: 0.5rem;
+      margin-block-start: 0.5rem;
+      margin-block-end: 0;
+    }
+
+    p {
+      margin-block-start: 0.5rem;
+      margin-block-end: 0.3rem;
     }
   }
 }
